--- a/MVVM/Views/MainView.xaml
+++ b/MVVM/Views/MainView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="EMS.Views.Main"
+﻿<Window x:Class="EMS.Views.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EMS.Views"    
         mc:Ignorable="d"
-        Title="Main" Height="650" Width="1000"
+        Title="Employee Management System" Height="650" Width="1000"
         Name="mainwindow"
         Loaded="Main_Loaded">
 
