--- a/App.xaml
+++ b/App.xaml
@@ -44,11 +44,11 @@
                                 <Border Name="back" CornerRadius="5" Padding="{TemplateBinding Padding}" Background="#212143" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
                                     <Grid>
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width ="20"/>
+                                            <!--<ColumnDefinition Width ="20"/>-->
                                             <ColumnDefinition Width ="*"/>
                                         </Grid.ColumnDefinitions>
                                         
-                                        <Path Margin="5,0,0,0" Height="12" Width="12" SnapsToDevicePixels="True" Data="M12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5C13 4.44772 12.5523 4 12 4Z" Fill="White" Stretch="Uniform" VerticalAlignment="Center"  />
+                                        <!--<Path Margin="5,0,0,0" Height="12" Width="12" SnapsToDevicePixels="True" Data="M12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5C13 4.44772 12.5523 4 12 4Z" Fill="White" Stretch="Uniform" VerticalAlignment="Center"  />-->
                                         <ContentPresenter Grid.Column="1" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
 
                                       
