--- a/MVVM/Views/MainView.xaml
+++ b/MVVM/Views/MainView.xaml
@@ -10,18 +10,24 @@
         Loaded="Main_Loaded">
 
     <Grid Background="#F5F5F5">
-        <Grid Background="White" Grid.Row="1" Margin="25,40,25,15" >
-            <TextBox Name="FilterTextBox" TextChanged="FilterTextBox_TextChanged" Height="30" Width="200" Margin="25" VerticalAlignment="Top"  HorizontalAlignment="left" BorderThickness="1" BorderBrush="#E0E0E0" />
-            <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ShowWindowCommand}"  Content="Add User" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="25" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
-            <ListView Name="UserList" ItemsSource="{Binding Users}" BorderBrush="#cdcdcd" Margin="25,70,25,25" Padding="0">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Name"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding Email}" Header="Email"/>
-                    </GridView>
-                </ListView.View>
-            </ListView>            
+        <Grid Background="White" Grid.Row="1" Margin="25,40,25,15">
+            <TextBox Name="FilterTextBox" TextChanged="FilterTextBox_TextChanged" Height="30" Width="450" Margin="25,25,0,0" VerticalAlignment="Top"  HorizontalAlignment="Left" BorderThickness="1" BorderBrush="#E0E0E0" />
+            <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ShowAddUserWindowCommand}"  Content="Add User" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="25" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
+            
+            <DataGrid Name="UsersDataGrid" AutoGenerateColumns="False" BorderBrush="#cdcdcd" Margin="25,70,25,10" Padding="0" IsReadOnly="True" CanUserAddRows="False" >
+                <DataGrid.Resources>
+                    <Style TargetType="DataGridRow">
+                        <EventSetter Event="MouseDoubleClick" Handler="UsersDataGrid_MouseDoubleClick" ></EventSetter>
+                    </Style>
+                </DataGrid.Resources>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Id" Width="*" Binding="{Binding Id}"/>
+                    <DataGridTextColumn Header="Name" Width="*" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Email" Width="*" Binding="{Binding Email}"/>
+                    <DataGridTextColumn Header="Gender" Width="*" Binding="{Binding Gender}"/>
+                    <DataGridTextColumn Header="Status" Width="*" Binding="{Binding Status}"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </Grid>
-                              
     </Grid>
 </Window>
