--- a/MVVM/Views/MainView.xaml
+++ b/MVVM/Views/MainView.xaml
@@ -12,8 +12,9 @@
     <Grid Background="#F5F5F5">
         <Grid Background="White" Grid.Row="1" Margin="25,40,25,15">
             <TextBox Name="FilterTextBox" TextChanged="FilterTextBox_TextChanged" Height="30" Width="450" Margin="25,25,0,0" VerticalAlignment="Top"  HorizontalAlignment="Left" BorderThickness="1" BorderBrush="#E0E0E0" />
-            <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ShowAddUserWindowCommand}"  Content="Add User" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="25" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
-            
+            <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ShowAddUserWindowCommand}"  Content="Add User" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="0,30,143,0" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
+            <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ExportToCsvCommand}"  Content="Export" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="0,30,25,0" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
+
             <DataGrid Name="UsersDataGrid" AutoGenerateColumns="False" BorderBrush="#cdcdcd" Margin="25,70,25,10" Padding="0" IsReadOnly="True" CanUserAddRows="False" >
                 <DataGrid.Resources>
                     <Style TargetType="DataGridRow">
