--- a/MVVM/Views/MainView.xaml
+++ b/MVVM/Views/MainView.xaml
@@ -10,12 +10,12 @@
         Loaded="Main_Loaded">
 
     <Grid Background="#F5F5F5">
-        <Grid Background="White" Grid.Row="1" Margin="25,40,25,15">
+        <Grid Background="White" Margin="25,40,25,10">
             <TextBox Name="FilterTextBox" TextChanged="FilterTextBox_TextChanged" Height="30" Width="450" Margin="25,25,0,0" VerticalAlignment="Top"  HorizontalAlignment="Left" BorderThickness="1" BorderBrush="#E0E0E0" />
             <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ShowAddUserWindowCommand}"  Content="Add User" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="0,30,143,0" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
             <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ExportToCsvCommand}"  Content="Export" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="0,30,25,0" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
 
-            <DataGrid Name="UsersDataGrid" AutoGenerateColumns="False" BorderBrush="#cdcdcd" Margin="25,70,25,10" Padding="0" IsReadOnly="True" CanUserAddRows="False" >
+            <DataGrid Grid.Row="1" Name="UsersDataGrid" AutoGenerateColumns="False" BorderBrush="#cdcdcd" Margin="25,70,25,210" Padding="0" IsReadOnly="True" CanUserAddRows="False" >
                 <DataGrid.Resources>
                     <Style TargetType="DataGridRow">
                         <EventSetter Event="MouseDoubleClick" Handler="UsersDataGrid_MouseDoubleClick" ></EventSetter>
@@ -29,6 +29,18 @@
                     <DataGridTextColumn Header="Status" Width="*" Binding="{Binding Status}"/>
                 </DataGrid.Columns>
             </DataGrid>
+            <StackPanel Grid.Row="2" HorizontalAlignment="Right" Orientation="Horizontal" Height="50" Margin="0,396,25,138">
+
+                <TextBlock Text="Records per page" VerticalAlignment="Center" Margin="5"/>
+
+                <ComboBox Margin="5"  Width="100" ItemsSource="{Binding DDNumbersOfPages}" SelectedItem="{Binding SelectedRecord}" SelectionChanged="DDNumbersOfPages_SelectionChanged" Height="27">
+
+                </ComboBox>
+
+                <Button x:Name="BtnPreviousPage" Height="30" CommandParameter="{x:Reference Name=mainwindow}" Command="{Binding PreviousCommand}"  Content="&lt;" Width="40" VerticalContentAlignment="Center" ToolTip="Previous page" Padding="5" BorderThickness="1" BorderBrush="#E0E0E0"  />
+                <Button x:Name="BtnNextPage" Height="30" CommandParameter="{x:Reference Name=mainwindow}" Command="{Binding NextCommand}"  Content=">" Width="40" Margin="5" VerticalContentAlignment="Center" ToolTip="Previous page" Padding="5" BorderThickness="1" BorderBrush="#E0E0E0"  />
+
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
