--- a/MVVM/Views/MainView.xaml
+++ b/MVVM/Views/MainView.xaml
@@ -24,7 +24,7 @@
                     <KeyBinding Command="{Binding SearchTextChangedCommand}" Key="Enter" />
                 </TextBox.InputBindings>
             </TextBox>
-            <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ShowAddUserWindowCommand}"  Content="Add User" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="0,30,143,0" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
+            <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ShowAddUserWindowCommand}"  Content="Add Employee" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="0,30,143,0" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
             <Button Height="30" CommandParameter="{x:Reference Name= mainwindow}" Command="{Binding ExportToCsvCommand}"  Content="Export" Width="100" VerticalContentAlignment="Center" Padding="5" Margin="0,30,25,0" VerticalAlignment="Top" HorizontalAlignment="Right" BorderThickness="1" BorderBrush="#E0E0E0"  />
 
             <DataGrid Name="UsersDataGrid" AutoGenerateColumns="False" BorderBrush="#cdcdcd" Margin="25,70,25,119" Padding="0" IsReadOnly="True" CanUserAddRows="False" Height="Auto" >
